--- a/less/_bbicons-variables.less
+++ b/less/_bbicons-variables.less
@@ -20,16 +20,25 @@ MIT License: https://github.com/driftyco/bbicons
 @bbicon-var-aspect-ratio: "\\f143";
 @bbicon-var-audio: "\\f104";
 @bbicon-var-back: "\\f105";
+@bbicon-var-bar: "\\f153";
 @bbicon-var-blastbot: "\\f107";
 @bbicon-var-blastbot-outline: "\\f106";
+@bbicon-var-building: "\\f154";
 @bbicon-var-calendar: "\\f108";
+@bbicon-var-camera: "\\f155";
 @bbicon-var-cancel: "\\f10a";
 @bbicon-var-cancel-circle: "\\f109";
 @bbicon-var-cc: "\\f10b";
 @bbicon-var-chan-down: "\\f10c";
 @bbicon-var-chan-up: "\\f10d";
+@bbicon-var-city: "\\f156";
 @bbicon-var-clock: "\\f10e";
+@bbicon-var-cloud: "\\f157";
+@bbicon-var-cloudy-night: "\\f158";
+@bbicon-var-coffee: "\\f159";
+@bbicon-var-color: "\\f15a";
 @bbicon-var-dashboard: "\\f144";
+@bbicon-var-dinner: "\\f15b";
 @bbicon-var-disc: "\\f10f";
 @bbicon-var-disconnected: "\\f110";
 @bbicon-var-down: "\\f111";
@@ -37,17 +46,22 @@ MIT License: https://github.com/driftyco/bbicons
 @bbicon-var-dvr-letters: "\\f112";
 @bbicon-var-eject: "\\f145";
 @bbicon-var-enter: "\\f114";
+@bbicon-var-extension: "\\f15c";
 @bbicon-var-fan: "\\f115";
 @bbicon-var-favorite: "\\f146";
 @bbicon-var-ff: "\\f116";
+@bbicon-var-film: "\\f15d";
+@bbicon-var-fitness: "\\f15e";
 @bbicon-var-flag: "\\f117";
 @bbicon-var-forward-10: "\\f118";
 @bbicon-var-forward-30: "\\f119";
 @bbicon-var-forward-5: "\\f11a";
 @bbicon-var-fridge: "\\f11b";
 @bbicon-var-games: "\\f147";
+@bbicon-var-garden: "\\f15f";
 @bbicon-var-history: "\\f11c";
 @bbicon-var-home: "\\f11d";
+@bbicon-var-hottub: "\\f160";
 @bbicon-var-info: "\\f11e";
 @bbicon-var-input: "\\f14d";
 @bbicon-var-input-antenna: "\\f148";
@@ -55,43 +69,74 @@ MIT License: https://github.com/driftyco/bbicons
 @bbicon-var-input-hdmi: "\\f14a";
 @bbicon-var-input-power: "\\f14b";
 @bbicon-var-input-svideo: "\\f14c";
+@bbicon-var-key: "\\f161";
 @bbicon-var-language: "\\f14e";
+@bbicon-var-laundry: "\\f162";
 @bbicon-var-left: "\\f11f";
+@bbicon-var-library: "\\f163";
 @bbicon-var-light-off: "\\f120";
 @bbicon-var-light-on: "\\f121";
 @bbicon-var-list: "\\f14f";
+@bbicon-var-location: "\\f164";
+@bbicon-var-lock-closed: "\\f165";
+@bbicon-var-lock-open: "\\f166";
 @bbicon-var-media-box: "\\f122";
 @bbicon-var-menu: "\\f123";
+@bbicon-var-moon: "\\f168";
 @bbicon-var-movie: "\\f150";
 @bbicon-var-music: "\\f124";
 @bbicon-var-mute: "\\f125";
 @bbicon-var-next: "\\f126";
 @bbicon-var-off: "\\f127";
 @bbicon-var-on: "\\f128";
+@bbicon-var-outlet: "\\f169";
 @bbicon-var-overscan: "\\f151";
+@bbicon-var-partlysunny: "\\f16a";
 @bbicon-var-pause: "\\f129";
+@bbicon-var-pets: "\\f16b";
+@bbicon-var-plane: "\\f16c";
 @bbicon-var-play: "\\f12b";
 @bbicon-var-play-pause: "\\f12a";
 @bbicon-var-plug: "\\f12c";
 @bbicon-var-prev: "\\f12d";
 @bbicon-var-projector: "\\f12e";
+@bbicon-var-radio: "\\f16d";
+@bbicon-var-rainy: "\\f16e";
 @bbicon-var-rec: "\\f12f";
 @bbicon-var-remote: "\\f130";
 @bbicon-var-repeat: "\\f131";
 @bbicon-var-replay: "\\f132";
 @bbicon-var-reply: "\\f152";
 @bbicon-var-right: "\\f133";
+@bbicon-var-router: "\\f16f";
 @bbicon-var-rw: "\\f134";
+@bbicon-var-school: "\\f170";
+@bbicon-var-seat: "\\f171";
+@bbicon-var-sleep: "\\f172";
+@bbicon-var-sofa: "\\f173";
 @bbicon-var-speaker: "\\f135";
+@bbicon-var-speedometer: "\\f174";
 @bbicon-var-star: "\\f136";
 @bbicon-var-stereo: "\\f137";
 @bbicon-var-stop: "\\f138";
+@bbicon-var-store: "\\f175";
+@bbicon-var-sun: "\\f176";
+@bbicon-var-thermometer: "\\f177";
+@bbicon-var-thumb-down: "\\f178";
+@bbicon-var-thumb-up: "\\f179";
+@bbicon-var-thunderstorm: "\\f17a";
 @bbicon-var-timer: "\\f139";
+@bbicon-var-today: "\\f17b";
 @bbicon-var-toggle: "\\f13a";
 @bbicon-var-touch: "\\f13b";
 @bbicon-var-tv: "\\f13c";
+@bbicon-var-umbrella: "\\f17c";
 @bbicon-var-up: "\\f13d";
 @bbicon-var-vcr: "\\f13e";
+@bbicon-var-videocam: "\\f17e";
 @bbicon-var-videogame: "\\f13f";
 @bbicon-var-vol-down: "\\f140";
 @bbicon-var-vol-up: "\\f141";
+@bbicon-var-warning: "\\f17f";
+@bbicon-var-wc: "\\f180";
+@bbicon-var-work: "\\f181";
